<resources>
    <string name="app_name">MTG Get Help</string>
    <string name="hello_world">Marathon Technology Group</string>
    <string name="text_version">Version 1.0</string>
    <string name="action_settings">Settings</string>
    <string name="button_call">CALL MARATHON</string>
    <string name="button_helpdesk">CONTACT HELPDESK</string>
    <string name="title_activity_help_desk">Contact Help Desk</string>
    <string name="button_send">Send to HelpDesk</string>
    <string name="contact_name_hint">Contact Name</string>
    <string name="contact_email_hint">Contact Email</string>
    <string name="contact_phone_hint">Phone Number</string>
    <string name="contact_issue_hint">Your Issue</string>
    <string name="select_nature">Nature of Issue</string>
    <string-array name="natures_array">
        <item>Internet Down</item>
        <item>Network Disconnectivity</item>
        <item>Email Account Setup Request</item>
        <item>Everything is broken</item>
        <item>Turning it off and back on again</item>
    </string-array>
</resources>
